# example_package

./: .gitignore  Makefile  README.md  setup.cfg
example_package/tests/: test_example_module_1.py
examples/: example_package_test.ipynb
