[metadata]
name = example_package
version = 0.0.X
author = Vanderlei C. Oliveira Jr.
author_email = vanderlei@on.br
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/birocoles/example_package
license = BSD 3-Clause License
project_urls =
    Bug Tracker = https://github.com/birocoles/example_package/issues
classifiers =
    Programming Language :: Python :: 3 :: only
    License :: OSI Approved :: BSD 3-Clause License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
